--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "camelcase": "^8.0.0",
+    "nodemailer": "^6.9.8",
+    "slugify": "^1.6.6",
     "uppercase-first": "^1.0.1"
   }
 }
