--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "camelcase": "^8.0.0",
     "nodemailer": "^6.9.8",
     "slugify": "^1.6.6",
