--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "camelcase": "^8.0.0",
+    "currency-converter-lt": "^2.0.1",
     "nodemailer": "^6.9.8",
+    "qrcode": "^1.5.3",
     "slugify": "^1.6.6",
     "uppercase-first": "^1.0.1"
   }
