--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "camelcase": "^8.0.0",
     "currency-converter-lt": "^2.0.1",
     "nodemailer": "^6.9.8",
+    "pdfkit": "^0.14.0",
+    "proper-upper-case": "^0.1.0",
     "qrcode": "^1.5.3",
     "slugify": "^1.6.6",
     "uppercase-first": "^1.0.1"
